--- a/single-post.html
+++ b/single-post.html
@@ -50,9 +50,9 @@ http://www.tooplate.com/view/2085-neuron
           </div>
           <div class="collapse navbar-collapse">
                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="index.html">мой дом</a></li>
+                    <li><a href="about.html"> о бо мне</a></li>
+                    <li><a href="gallery.html">Дмитрий куприянов</a></li>
                     <li><a href="contact.html">Contact</a></li>
                </ul>
           </div>
