--- a/gallery.html
+++ b/gallery.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 
 <meta charset="UTF-8">
@@ -69,7 +69,7 @@ http://www.tooplate.com/view/2085-neuron
           <div class="row">
 
                <div class="col-md-12 col-sm-12">
-                    <h1>Image Gallery</h1>
+                    <h1>dmitry kupriyanov</h1>
                </div>
 
           </div>
@@ -78,7 +78,7 @@ http://www.tooplate.com/view/2085-neuron
 
 <!-- Gallery Section -->
 
-<section id="gallery">
+<section id="Dmitry kupriyanov">
      <div class="container">
           <div class="row">
 
