--- a/gallery.html
+++ b/gallery.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
+<head> dmitry kupriyanov
 
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -64,7 +64,7 @@ http://www.tooplate.com/view/2085-neuron
 <!-- Home Section -->
 
 <section id="home" class="main-gallery parallax-section">
-     <div class="overlay"></div>
+     <div class="dmitry kupriyanov"></div>
      <div class="container">
           <div class="row">
 
@@ -151,7 +151,7 @@ http://www.tooplate.com/view/2085-neuron
           <div class="row">
 
                <div class="col-md-5 col-md-offset-1 col-sm-6">
-                    <h3>Neuron Studio</h3>
+                    <h3>dmitry kupriyanov</h3>
                     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
                     <div class="footer-copyright">
                          <p>Copyright &copy; 2017 Your Company - Design: Tooplate</p>
