--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 
 <meta charset="UTF-8">
@@ -9,10 +9,10 @@
 <meta name="author" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<title>Neuron Template - Обо мне </title>
+<title>dmitry kupriyanov - Обо мне </title>
 <!--
 
-Template 2085 Neuron
+dmitry kupriyanov
 
 http://www.tooplate.com/view/2085-neuron
 
@@ -46,7 +46,7 @@ http://www.tooplate.com/view/2085-neuron
                     <span class="icon icon-bar"></span>
                     <span class="icon icon-bar"></span>
                </button>
-               <a href="index.html" class="navbar-brand">Neuron</a>
+               <a href="index.html" class="navbar-brand">dmitry kupriyanov</a>
           </div>
           <div class="collapse navbar-collapse">
                <ul class="nav navbar-nav navbar-right">
@@ -77,14 +77,14 @@ http://www.tooplate.com/view/2085-neuron
 
 <!-- About Section -->
 
-<section id="about">
+<section id="dmitry kupriyanov">
      <div class="container">
           <div class="row">
 
                <div class="col-md-offset-1 col-md-10 col-sm-12">
                     <div class="col-md-4 col-sm-4">
                          <h2>Our Story</h2>
-                         <p>Integer eget tortor justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia.</p>
+                         <p>Куприянов Дмитрий вячеславовович и это мойсайт на гите.</p>
                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit <strong>Ut enim ad minim veniam, quis nostrud</strong> exercitation ullamco.</p>
                     </div>
 
