--- a/single-post.html
+++ b/single-post.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 
 <meta charset="UTF-8">
@@ -9,7 +9,7 @@
 <meta name="author" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<title>Neuron Template - Single Post</title>
+<title>куприянов дмитрий </title>
 <!--
 
 Template 2085 Neuron
@@ -121,7 +121,7 @@ http://www.tooplate.com/view/2085-neuron
                                    <img src="images/blog-image3.jpg" class="img-responsive" alt="Blog Image 3">
                               </div>
                          </div>
-                         <p>Aliquam blandit velit nisi, sed fringilla felis lacinia sed. Integer vitae porta felis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus non tristique lacus. Suspendisse ut tortor vitae risus lacinia tristique. Aliquam sed consectetur libero.</p>
+                         <p>это сайт сообственность куприянова дмитрия .</p>
 
                          <div class="blog-author">
                               <div class="media">
@@ -130,7 +130,7 @@ http://www.tooplate.com/view/2085-neuron
                                    </div>
                                    <div class="media-body">
                                         <h3 class="media-heading"><a href="#">Jen Lopez ( Designer )</a></h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+                                        <p>это сайт сообственность куприянова дмитрия.</p>
                                    </div>
                               </div>
                          </div>
@@ -203,7 +203,7 @@ http://www.tooplate.com/view/2085-neuron
 
                <div class="col-md-5 col-md-offset-1 col-sm-6">
                     <h3>Neuron Studio</h3>
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+                    <p>это сайт сообственность куприянова дмитрия.</p>
                     <div class="footer-copyright">
                          <p>Copyright &copy; 2017 Your Company - Design: Tooplate</p>
                     </div>
