--- a/single-post.html
+++ b/single-post.html
@@ -144,7 +144,7 @@ http://www.tooplate.com/view/2085-neuron
                                         <div class="media-body">
                                              <h3 class="media-heading">David Jones</h3>
                                              <span>3 days ago</span>
-                                             <p>Aliquam gravida arcu at risus blandit, in interdum metus varius. Cras efficitur, ex sit amet tincidunt rhoncus, dui ex hendrerit risus, ac dapibus ligula mi id leo. In auctor dui justo, ac consequat dui posuere ac.</p>
+                                             <p>это сайт сообственность куприянова дмитрия.</p>это сайт сообственность куприянова дмитрия
                                         </div>
                                    </div>
                                    <div class="media">
@@ -154,7 +154,7 @@ http://www.tooplate.com/view/2085-neuron
                                         <div class="media-body">
                                              <h3 class="media-heading">Omar Larus</h3>
                                              <span>5 days ago</span>
-                                             <p>Maecenas ultricies ante dignissim, iaculis ligula sed, gravida ipsum. Pellentesque lobortis velit mi, sed volutpat enim facilisis.</p>
+                                             <p>это сайт сообственность куприянова дмитрия.</p>
                                         </div>
                                    </div>
                                    <div class="media">
@@ -164,7 +164,7 @@ http://www.tooplate.com/view/2085-neuron
                                         <div class="media-body">
                                              <h3 class="media-heading">Walker Jen</h3>
                                              <span>July 27, 2017</span>
-                                             <p>In eu posuere nulla, sit amet semper lectus. Aliquam gravida arcu at risus blandit, in interdum metus varius. Cras efficitur, ex sit amet tincidunt rhoncus, dui ex hendrerit risus, ac dapibus ligula mi id leo.</p>
+                                             <p>это сайт сообственность куприянова дмитрия.</p>
                                         </div>
                                    </div>
                                    <div class="media">
@@ -174,19 +174,19 @@ http://www.tooplate.com/view/2085-neuron
                                         <div class="media-body">
                                              <h3 class="media-heading">Jen Lopez</h3>
                                              <span>July 24, 2017</span>
-                                             <p>In auctor dui justo, ac consequat dui posuere ac. Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate voluptate neque, curabitur.</p>
+                                             <p>это сайт сообственность куприянова дмитрия.</p>
                                         </div>
                                    </div>
                          </div>
 
                          <div class="blog-comment-form">
-                              <h3>Leave a Comment</h3>
-                                   <form action="#" method="post">
-                           	 	 	 	<input type="text" class="form-control" placeholder="Name" name="name" required>
-                                        <input type="email" class="form-control" placeholder="Email" name="email" required>
-                                        <textarea name="message" rows="5" class="form-control" id="message" placeholder="Message" message="message" required="required"></textarea>
+                              <h3>это сайт сообственность куприянова дмитрия</h3>
+                                   <form action="#" method="это сайт сообственность куприянова дмитрия">
+                           	 	 	 	<input type="это сайт сообственность куприянова дмитрия" class="form-control" placeholder="Name" name="name" required>
+                                        <input type="это сайт сообственность куприянова дмитрия" class="form-control" placeholder="Email" name="email" required>
+                                        <textarea name="это сайт сообственность куприянова дмитрия" rows="5" class="form-control" id="message" placeholder="Message" message="message" required="required"></textarea>
                                         <div class="col-md-3 col-sm-4">
-                                             <input name="submit" type="submit" class="form-control" id="submit" value="Post Your Comment">
+                                             <input name="submit" type="это сайт сообственность куприянова дмитрия" class="form-control" id="submit" value="Post Your Comment">
                                         </div>
                                    </form>
                          </div>
@@ -213,7 +213,7 @@ http://www.tooplate.com/view/2085-neuron
                     <h3>Talk to us</h3>
                     <p><i class="fa fa-globe"></i> 512 Delicious Street, San Francisco, CA 10880</p>
                     <p><i class="fa fa-phone"></i> 010-020-0990</p>
-                    <p><i class="fa fa-save"></i> info@company.com</p>
+                    <p><i class="fa fa-save"></i> это сайт сообственность куприянова дмитрия</p>
                </div>
 
                <div class="clearfix col-md-12 col-sm-12">
