--- a/about.html
+++ b/about.html
@@ -50,10 +50,10 @@ http://www.tooplate.com/view/2085-neuron
           </div>
           <div class="collapse navbar-collapse">
                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">Home</a></li>
-                    <li class="active"><a href="about.html">About</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="index.html">DOMOOI</a></li>
+                    <li class="active"><a href="about.html">Обо мне</a></li>
+                    <li><a href="gallery.html">МоиФото</a></li>
+                    <li><a href="contact.html">Контакты</a></li>
                </ul>
           </div>
 
@@ -96,14 +96,14 @@ http://www.tooplate.com/view/2085-neuron
 
                     <div class="col-md-4 col-sm-4">
                          <h2>HTML CSS</h2>
-                         <p>Vivamus non scelerisque ex, et interdum leo. In bibendum lacus vitae felis egestas, at consectetur metus facilisis.</p>
-                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit Ut enim ad minim veniam, quis nostrud exercitation.</p>
+                         <p>Test Тест.</p>
+                         <p>Test Тест.</p>
                     </div>
 
                     <div class="col-md-6 col-sm-6">
                          <h3>Fully Customizable!</h3>
-                         <p>Maecenas quis pulvinar neque, non dapibus orci. Integer non suscipit dui. In eu tempor sapien. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras porta lacus ac sagittis imperdiet. Vestibulum eget mattis quam.</p>
-                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercita.</p>
+                         <p>Test Тест.</p>
+                         <p>Test Тест.</p>
                     </div>
 
                     <div class="col-md-6 col-sm-6">
@@ -115,13 +115,13 @@ http://www.tooplate.com/view/2085-neuron
                     <div class="col-md-4 col-sm-4">
                          <img src="images/about-image1.jpg" class="img-responsive" alt="Blog Image">
                          <h3>Section One</h3>
-                         <p>Pellentesque lobortis velit mi, sed volutpat enim facilisis at. Maecenas quis pulvinar neque, non dapibus orci.</p>
+                         <p>Test Тест.</p>
                     </div>
 
                     <div class="col-md-4 col-sm-4">
                          <img src="images/about-image2.jpg" class="img-responsive" alt="Blog Image">
-                         <h3>Section Two</h3>
-                         <p>Pellentesque lobortis velit mi, sed volutpat enim facilisis at. Maecenas quis pulvinar neque, non dapibus orci.</p>
+                         <h3>Test Тест</h3>
+                         <p>Test Тест.</p>
                     </div>
 
                     <div class="col-md-4 col-sm-4">
@@ -156,7 +156,7 @@ http://www.tooplate.com/view/2085-neuron
                     <h3>Talk to us</h3>
                     <p><i class="fa fa-globe"></i> 512 Delicious Street, San Francisco, CA 10880</p>
                     <p><i class="fa fa-phone"></i> 010-020-0990</p>
-                    <p><i class="fa fa-save"></i> info@company.com</p>
+                    <p><i class="fa fa-save"></i> Test Тест</p>
                </div>
 
                <div class="clearfix col-md-12 col-sm-12">
@@ -165,11 +165,11 @@ http://www.tooplate.com/view/2085-neuron
 
                <div class="col-md-12 col-sm-12">
                     <ul class="social-icon">
-                         <li><a href="#" class="fa fa-facebook"></a></li>
-                         <li><a href="#" class="fa fa-twitter"></a></li>
-                         <li><a href="#" class="fa fa-google-plus"></a></li>
-                         <li><a href="#" class="fa fa-dribbble"></a></li>
-                         <li><a href="#" class="fa fa-linkedin"></a></li>
+                         <li><a href="#" class="Test Тест"></a></li>
+                         <li><a href="#" class="Test Тест"></a></li>
+                         <li><a href="#" class="Test Тест"></a></li>
+                         <li><a href="#" class="Test Тест"></a></li>
+                         <li><a href="#" class="Test Тест"></a></li>
                     </ul>
                </div>
                
