--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 
 <meta charset="UTF-8">
@@ -9,12 +9,12 @@
 <meta name="author" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<title>Neuron Template - Contact</title>
+<title>Test Тест</title>
 <!--
 
-Template 2085 Neuron
+Test Тест
 
-http://www.tooplate.com/view/2085-neuron
+Test Тест
 
 -->
 <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -46,14 +46,14 @@ http://www.tooplate.com/view/2085-neuron
                     <span class="icon icon-bar"></span>
                     <span class="icon icon-bar"></span>
                </button>
-               <a href="index.html" class="navbar-brand">Neuron</a>
+               <a href="index.html" class="navbar-brand">Test Тест</a>
           </div>
           <div class="collapse navbar-collapse">
                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
-                    <li class="active"><a href="contact.html">Contact</a></li>
+                    <li><a href="index.html">Test Тест1</a></li>
+                    <li><a href="about.html">Test Тест1</a></li>
+                    <li><a href="gallery.html">Test Тест1</a></li>
+                    <li class="active"><a href="contact.html">Test Тест1</a></li>
                </ul>
           </div>
 
@@ -68,7 +68,7 @@ http://www.tooplate.com/view/2085-neuron
           <div class="row">
 
                <div class="col-md-12 col-sm-12">
-                    <h1>Contact Us</h1>
+                    <h1>Test Тест1</h1>
                </div>
 
           </div>
@@ -82,7 +82,7 @@ http://www.tooplate.com/view/2085-neuron
           <div class="row">
 
                <div class="col-md-offset-1 col-md-10 col-sm-12">
-                    <h2>Say hello..</h2>
+                    <h2>Test Тест1</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 
                     <form action="#" method="post">
@@ -115,7 +115,7 @@ http://www.tooplate.com/view/2085-neuron
           <div class="row">
 
                <div class="col-md-5 col-md-offset-1 col-sm-6">
-                    <h3>Neuron Studio</h3>
+                    <h3>Test Тест1</h3>
                     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
                     <div class="footer-copyright">
                          <p>Copyright &copy; 2017 Your Company - Design: Tooplate</p>
