--- a/single-post.html
+++ b/single-post.html
@@ -53,7 +53,7 @@ http://www.tooplate.com/view/2085-neuron
                     <li><a href="index.html">мой дом</a></li>
                     <li><a href="about.html"> о бо мне</a></li>
                     <li><a href="gallery.html">Дмитрий куприянов</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="contact.html">Контакты</a></li>
                </ul>
           </div>
 
@@ -62,13 +62,13 @@ http://www.tooplate.com/view/2085-neuron
 
 <!-- Home Section -->
 
-<section id="home" class="main-single-post parallax-section">
+<section id="Главнаястраница" class="main-single-post parallax-section">
      <div class="overlay"></div>
      <div class="container">
           <div class="row">
 
                <div class="col-md-12 col-sm-12">
-                    <h1>Single Post</h1>
+                    <h1>Первыйпост</h1>
                </div>
 
           </div>
@@ -86,7 +86,7 @@ http://www.tooplate.com/view/2085-neuron
                          
 
                          <div class="blog-post-title">
-                              <h2>We Help You Create Perfect Modern Design</a></h2>
+                              <h2>Мой тестовый сайт</a></h2>
                          </div>
 
                          <div class="blog-post-format">
@@ -129,21 +129,21 @@ http://www.tooplate.com/view/2085-neuron
                                         <img src="images/author-image1.jpg" class="img-circle img-responsive" alt="blog">
                                    </div>
                                    <div class="media-body">
-                                        <h3 class="media-heading"><a href="#">Jen Lopez ( Designer )</a></h3>
+                                        <h3 class="media-heading"><a href="#">Дмитрий Куприянов ( Designer )</a></h3>
                                         <p>это сайт сообственность куприянова дмитрия.</p>
                                    </div>
                               </div>
                          </div>
 
                          <div class="blog-comment">
-                              <h3>Comments</h3>
+                              <h3>Коментарии</h3>
                                    <div class="media">
                                         <div class="media-object pull-left">
                                              <img src="images/comment-image1.jpg" class="img-responsive img-circle" alt="Blog Image 11">
                                         </div>
                                         <div class="media-body">
-                                             <h3 class="media-heading">David Jones</h3>
-                                             <span>3 days ago</span>
+                                             <h3 class="media-heading">КуприяновДмитрий</h3>
+                                             <span>3дня спустя</span>
                                              <p>это сайт сообственность куприянова дмитрия.</p>это сайт сообственность куприянова дмитрия
                                         </div>
                                    </div>
