--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@ http://www.tooplate.com/view/2085-neuron
           </div>
           <div class="collapse navbar-collapse">
                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">DOMOOI</a></li>
+                    <li><a href="index.html">Главная</a></li>
                     <li class="active"><a href="about.html">Обо мне</a></li>
                     <li><a href="gallery.html">МоиФото</a></li>
                     <li><a href="contact.html">Контакты</a></li>
