--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@ http://www.tooplate.com/view/2085-neuron
 
                     <div class="col-md-4 col-sm-4">
                          <img src="images/about-image1.jpg" class="img-responsive" alt="Blog Image">
-                         <h3>Section One</h3>
+                         <h3>Первая картинка</h3>
                          <p>Test Тест.</p>
                     </div>
 
@@ -126,12 +126,12 @@ http://www.tooplate.com/view/2085-neuron
 
                     <div class="col-md-4 col-sm-4">
                          <img src="images/about-image3.jpg" class="img-responsive" alt="Blog Image">
-                         <h3>Section Three</h3>
-                         <p>Pellentesque lobortis velit mi, sed volutpat enim facilisis at. Maecenas quis pulvinar neque, non dapibus orci.</p>
+                         <h3>вторая картинка</h3>
+                         <p>здесь быили английские буквы.</p>
                     </div>
 					
                     <h3>One Column</h3>
-                    <p>Fusce finibus ac orci ut feugiat. Duis accumsan dui non augue ullamcorper, at porta elit lacinia. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras at est non quam mattis hendrerit. Fusce purus massa, pretium malesuada eros nec, feugiat iaculis sem.</p>
+                    <p>здесь быили английские буквытоже.</p>
                </div>
 
           </div>
