--- a/about.html
+++ b/about.html
@@ -145,16 +145,16 @@ http://www.tooplate.com/view/2085-neuron
           <div class="row">
 
                <div class="col-md-5 col-md-offset-1 col-sm-6">
-                    <h3>Neuron Studio</h3>
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+                    <h3>Дмитрий студия</h3>
+                    <p>здесь быили английские буквы тоже 5.</p>
                     <div class="footer-copyright">
-                         <p>Copyright &copy; 2017 Your Company - Design: Tooplate</p>
+                         <p>Copyright &copy; 2023 год e</p>
                     </div>
                </div>
 
                <div class="col-md-4 col-md-offset-1 col-sm-6">
                     <h3>Talk to us</h3>
-                    <p><i class="fa fa-globe"></i> 512 Delicious Street, San Francisco, CA 10880</p>
+                    <p><i class="fa fa-globe"></i> Ивановская область комсомолськ</p>
                     <p><i class="fa fa-phone"></i> 010-020-0990</p>
                     <p><i class="fa fa-save"></i> Test Тест</p>
                </div>
