--- a/about.html
+++ b/about.html
@@ -155,7 +155,7 @@ http://www.tooplate.com/view/2085-neuron
                <div class="col-md-4 col-md-offset-1 col-sm-6">
                     <h3>Talk to us</h3>
                     <p><i class="fa fa-globe"></i> Ивановская область комсомолськ</p>
-                    <p><i class="fa fa-phone"></i> 010-020-0990</p>
+                    <p><i class="fa fa-phone"></i> Домашний сад лулу </p>
                     <p><i class="fa fa-save"></i> Test Тест</p>
                </div>
 
