--- a/about.html
+++ b/about.html
@@ -157,6 +157,7 @@ http://www.tooplate.com/view/2085-neuron
                     <p><i class="fa fa-globe"></i> Ивановская область комсомолськ</p>
                     <p><i class="fa fa-phone"></i> Домашний сад лулу </p>
                     <p><i class="fa fa-save"></i> Test Тест</p>
+			<p><i class=" fa fa-clone"></i> дРЯНЬБЕРИззз</p>
                </div>
 
                <div class="clearfix col-md-12 col-sm-12">
