--- a/about.html
+++ b/about.html
@@ -158,6 +158,7 @@ http://www.tooplate.com/view/2085-neuron
                     <p><i class="fa fa-phone"></i> Домашний сад лулу </p>
                     <p><i class="fa fa-save"></i> Test Тест</p>
 			<p><i class=" fa fa-clone"></i> дРЯНЬБЕРИззз</p>
+		       <p><i class=" fa fa-paste"></i> ОзОНТ</p>
                </div>
 
                <div class="clearfix col-md-12 col-sm-12">
