--- a/contact.html
+++ b/contact.html
@@ -127,6 +127,9 @@ Test Тест
                     <p><i class="fa fa-globe"></i> 512 Delicious Street, San Francisco, CA 10880</p>
                     <p><i class="fa fa-phone"></i> 010-020-0990</p>
                     <p><i class="fa fa-save"></i> info@company.com</p>
+                    <p><i class="fa fa-web"></i> Новаявебиконка/p>
+                         <p><i class="fa fa-strong"></i> новая иконка</p>
+                    
                </div>
 
                <div class="clearfix col-md-12 col-sm-12">
