--- a/contact.html
+++ b/contact.html
@@ -116,17 +116,17 @@ Test Тест
 
                <div class="col-md-5 col-md-offset-1 col-sm-6">
                     <h3>Test Тест1</h3>
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+                    <p>что быиспользовать этот сайт нужно его конкретно так доработать .</p>
                     <div class="footer-copyright">
-                         <p>Copyright &copy; 2017 Your Company - Design: Tooplate</p>
+                         <p>Copyright &copy; 2023 моя кампания</p>
                     </div>
                </div>
 
                <div class="col-md-4 col-md-offset-1 col-sm-6">
                     <h3>Talk to us</h3>
-                    <p><i class="fa fa-globe"></i> 512 Delicious Street, San Francisco, CA 10880</p>
-                    <p><i class="fa fa-phone"></i> 010-020-0990</p>
-                    <p><i class="fa fa-save"></i> info@company.com</p>
+                    <p><i class="fa fa-globe"></i> 2023копирайт</p>
+                    <p><i class="fa fa-phone"></i> Куприянов</p>
+                    <p><i class="fa fa-save"></i> Дмитрий</p>
                     <p><i class="fa fa-web"></i> Новаявебиконка/p>
                          <p><i class="fa fa-strong"></i> новая иконка</p>
                     
