--- a/contact.html
+++ b/contact.html
@@ -87,10 +87,10 @@ Test Тест
 
                     <form action="#" method="post">
                          <div class="col-md-4 col-sm-4">
-                              <input name="name" type="text" class="form-control" id="name" placeholder="Name">
+                              <input name="Свое имя" type="text" class="form-control" id="Свое имя" placeholder="Свое имя">
                          </div>
                          <div class="col-md-4 col-sm-4">
-                              <input name="email" type="email" class="form-control" id="email" placeholder="Email">
+                              <input name="почта" type="почта" class="form-control" id="почта" placeholder="Email">
                       	 </div>
                          <div class="col-md-4 col-sm-4">
                               <input name="subject" type="text" class="form-control" id="subject" placeholder="Subject">
