--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@ Test Тест
                     <p><i class="fa fa-globe"></i> 2023копирайт</p>
                     <p><i class="fa fa-phone"></i> Куприянов</p>
                     <p><i class="fa fa-save"></i> Дмитрий</p>
-                    <p><i class="fa fa-web"></i> Новаявебиконка/p>
+                    <p><i class="fa fa-web"></i> Новаявебиконка</p>
                          <p><i class="fa fa-strong"></i> новая иконка</p>
                     
                </div>
