--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@ http://www.tooplate.com/view/2085-neuron
           <div class="collapse navbar-collapse">
                <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="about.html">О бо мне</a></li>
+                    <li><a href="gallery.html">Галерея</a></li>
+                    <li><a href="contact.html">Контакты</a></li>
                </ul>
           </div>
 
@@ -69,7 +69,7 @@ http://www.tooplate.com/view/2085-neuron
           <div class="row">
 
                <div class="col-md-12 col-sm-12">
-                    <h1>Hello! This is Neuron.</h1>
+                    <h1>Привет это мой сайт.</h1>
                     <h4>Responsive Blog HTML CSS Website Template</h4>
                     <a href="#blog" class="smoothScroll btn btn-default">Discover More</a>
                </div>
