--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 
 <meta charset="UTF-8">
@@ -9,7 +9,7 @@
 <meta name="author" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<title>Neuron HTML CSS Template</title>
+<title>Главная</title>
 <!--
 
 Template 2085 Neuron
@@ -50,7 +50,7 @@ http://www.tooplate.com/view/2085-neuron
           </div>
           <div class="collapse navbar-collapse">
                <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="index.html">Home</a></li>
+                    <li class="active"><a href="index.html">Главная</a></li>
                     <li><a href="about.html">О бо мне</a></li>
                     <li><a href="gallery.html">Галерея</a></li>
                     <li><a href="contact.html">Контакты</a></li>
