--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@ http://www.tooplate.com/view/2085-neuron
 
                <div class="col-md-12 col-sm-12">
                     <h1>Привет это мой сайт.</h1>
-                    <h4>Responsive Blog HTML CSS Website Template</h4>
-                    <a href="#blog" class="smoothScroll btn btn-default">Discover More</a>
+                    <h4>Тестовая надпись наглавной странице</h4>
+                    <a href="#blog" class="smoothScroll btn btn-default">Узнатьбольше </a>
                </div>
 
           </div>
@@ -92,16 +92,16 @@ http://www.tooplate.com/view/2085-neuron
                               </a>
                          </div>
                          <div class="blog-post-title">
-                              <h3><a href="single-post.html">We Help You Create Perfect Modern Design</a></h3>
+                              <h3><a href="single-post.html">Что можно сделать с заголовком </a></h3>
                          </div>
                          <div class="blog-post-format">
-                              <span><a href="#"><img src="images/author-image1.jpg" class="img-responsive img-circle"> Jen Lopez</a></span>
-                              <span><i class="fa fa-date"></i> July 22, 2017</span>
-                              <span><a href="#"><i class="fa fa-comment-o"></i> 35 Comments</a></span>
+                              <span><a href="#"><img src="images/author-image1.jpg" class="img-responsive img-circle"> Дмитрий куприянов</a></span>
+                              <span><i class="fa fa-date"></i> Сентябрь2023</span>
+                              <span><a href="#"><i class="fa fa-comment-o"></i> 35 Комментов</a></span>
                          </div>
                          <div class="blog-post-des">
-                              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                              <a href="single-post.html" class="btn btn-default">Continue Reading</a>
+                              <p>шаблонсайтагдеизменен текст.</p>
+                              <a href="single-post.html" class="btn btn-default">Продолжить</a>
                          </div>
                     </div>
 
