--- a/index.html
+++ b/index.html
@@ -112,15 +112,15 @@ http://www.tooplate.com/view/2085-neuron
                               </a>
                          </div>
                          <div class="blog-post-title">
-                              <h3><a href="single-post.html">In pretium tellus et ante accumsan</a></h3>
+                              <h3><a href="single-post.html">Мой Обед</a></h3>
                          </div>
                          <div class="blog-post-format">
-                              <span><a href="#"><img src="images/author-image2.jpg" class="img-responsive img-circle"> Leo Dennis</a></span>
-                              <span><i class="fa fa-date"></i> June 10, 2017</span>
-                              <span><a href="#"><i class="fa fa-comment-o"></i> 48 Comments</a></span>
+                              <span><a href="#"><img src="images/author-image2.jpg" class="img-responsive img-circle"> Дмитрий куприянов</a></span>
+                              <span><i class="fa fa-date"></i> Сентябрь 2023</span>
+                              <span><a href="#"><i class="fa fa-comment-o"></i> 48 коментов</a></span>
                          </div>
                          <div class="blog-post-des">
-                              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                              <p>ходил вкфс недавно.</p>
                               <a href="single-post.html" class="btn btn-default">Continue Reading</a>
                          </div>
                     </div>
